labs/network-policy/allow-specific.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-specific
spec:
  podSelector:
    matchLabels:
      deployment: TODO
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              network: TODO
          podSelector:
            matchLabels:
              deployment: sample-app
      ports:
        - port: 8080
          protocol: TCP
